src/components/layout/header/navlogin.module.css
.pfp {
  width: 30px;
  margin-right: 1rem;
  border: 1px solid white;
  border-radius: 0.2rem;
  scale: 1.5;
  transform: translateY(0.2rem);
  align-self: flex-start;
}

.pfp.mobile {
  transform: none;
  scale: 1.3;
}

.profileContainer {
  display: flex;
}

.profileContainer > span {
  padding-left: 0.15rem;
  overflow-x: hidden;
  text-overflow: ellipsis;
}

.profileContainer:not(.mobile) > span {
  max-width: 16rem;
}

/* <=md */
@media only screen and (max-width: 991.98px) {
  .profileContainer:not(.mobile) > span {
    max-width: 9rem;
  }
}

